# Lab13-Observability

./: database.db  pyproject.toml  requirements.txt
app/: agent.py  logging_config.py  main.py  middleware.py  models.py  pii.py  run.py  tracing.py  utils.py
app/baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
app/baml_src/: clients.baml  determine_next_step.baml  generators.baml
data/: sample_queries.jsonl
docs/: blueprint-template.md
scripts/: load_test.py  seed_orders.py
tests/: test_pii.py
